Promises are the best bro!

--- a/index.html
+++ b/index.html
@@ -98,22 +98,15 @@
                 </li>
               </ul>
             </li>
-          </ul>  
-            
+          </ul>    
         </section>
 
         <hr>
 
         <section>
-          <h2>My Sources</h2>
-          <!-- Clickable Images and buttons from idb-->
-          <button>Update Sources</button>
-          <input type="text" placeholder="by Source e.g bbc">
-          <button>Get By Source</button>
-          <p>Sources Are added based on your selcted categories</p>
-          <button>Ŕemove Source</button>
-
+          <h2>Book Marks</h2>
         </section>
+         
       </main>
 
       <footer>
