--- a/polymer/src/get-headlines.html
+++ b/polymer/src/get-headlines.html
@@ -153,7 +153,7 @@
         }).then(function(res){
           return res.json();
         }).then(function(res){
-          self.results.push(res); // Articles should be rendering from here
+          self.results.push(res); // Articles should render from here: as soon as they are pushed to results
         });
 
         return request;
